tests/test_data/CodeStructureSnippets/good/expr_good3.ifj21
require "ifj21"
function main()
    local x : integer = #"papa"
    local y : number = 100.90
    local vysl : number = (10*(y/x))*y/x*1564564.898789
end
main()