tests/test_data/CodeStructureSnippets/bad/sem_err_5.2.ifj21
require "ifj21"

function foo() : integer, integer
  local i : integer = 1
  local j : integer = 4
  local x : integer = 5

  return i,j,x      -- zly pocet
end
foo()
